[tool.poetry]
name = "mkpm-python"
version = "0.1.0"
description = ""
authors = ["Clay Risser <clayrisser@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
